#6 - Fixed large black gap on mobile (needed height: auto), #8 - added post navigation links to category.php and tag.php so that posts in those archives are not inaccessible when pagination limits are set

--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -767,6 +767,7 @@ div.single-post-wrapper article {
 
 div.single-post-left {
     padding: 0;
+    height: auto !important;
 }
 
 div.single-post-left img {
